--- a/src/Components/CSS/Home.css
+++ b/src/Components/CSS/Home.css
@@ -2,6 +2,14 @@
 #homePage{
     display: flex;
     justify-content: center;
+    background-image: url(home.webp);
+    height: 100vh;
     width: 100vw;
-    height: 90vh;
+}
+
+#siteTitle{
+    display: flex;
+    justify-content: center;
+    margin-top: 110px;
+    text-decoration: underline;
 }
