--- a/src/Components/CSS/products.css
+++ b/src/Components/CSS/products.css
@@ -14,4 +14,6 @@ h1 {
 .allProductsPresent {
     background-color: pink;
     background-image: url(products.webp);
+    background-position: center;
+    background-size: auto;
 }
