--- a/src/Components/CSS/Register.css
+++ b/src/Components/CSS/Register.css
@@ -1,4 +1,14 @@
-#loginForm{
+#registerForm{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    background-image: url(login.jpg);
+    background-position:center;
+}
+
+#blurDiv {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -6,22 +16,20 @@
     text-align: center;
     position: relative;
     padding: 10px;
-    background-image: url(login.jpg);
-    background-repeat: no-repeat;
-    background-size: auto;
-    height: 700px;
+    height: 50rem;
     border-radius: 10px;
-    width: 1400px;
-}
+    background-color: rgba(235, 158, 212, 0.61);
+    backdrop-filter: blur(5px);}
 
-#loginForm h1 {
+
+#registerForm h1 {
     font-family: monospace;
     font-size: xx-large;
     text-shadow: 0px 7px 8px black;
     color: white;
 }
 
-#loginForm input {
+#registerForm input {
     display: flex;
     flex-direction: column;
     height: 23px;
@@ -36,7 +44,7 @@
     outline: none;
 }
 
-#signUp{
+#logIn{
     text-decoration: none;
     border-style: solid;
     border-radius: 8px;
@@ -48,7 +56,7 @@
     margin-top: 30px;
 }
 
-#loginForm button{
+#registerForm button{
     padding: 1.5px;
     border-radius: 8px;
     border-style: solid;
@@ -60,4 +68,18 @@
     text-align: center;
     color: grey;
 }
+
+
+#reqHeader {
+    font-family: monospace;
+    font-size: xx-large;
+    text-shadow: 0px 5px 6px black;
+    color: white;
+}
+
+#singleReq {
+    font-family: monospace;
+    color: white;
+}
+
 
