fixed lack of pictures, added to db, and seed, and front end

--- a/src/Components/CSS/products.css
+++ b/src/Components/CSS/products.css
@@ -17,3 +17,9 @@ h1 {
     background-position: center;
     background-size: auto;
 }
+
+#productList {
+    display: flex;
+    align-items: center;
+    text-align: center;
+}
