styling added to productView

--- a/src/Components/CSS/products.css
+++ b/src/Components/CSS/products.css
@@ -16,6 +16,7 @@ h1 {
     background-image: url(products.webp);
     background-position: center;
     background-size: auto;
+    padding: 5%;
 }
 
 #productList {
