--- a/src/Components/CSS/Login.css
+++ b/src/Components/CSS/Login.css
@@ -11,7 +11,7 @@
     background-size: auto;
     height: 700px;
     border-radius: 10px;
-    width: 1400px;
+    width: 1440px;
 }
 
 #loginForm h1 {
@@ -41,7 +41,7 @@
     border-style: solid;
     border-radius: 8px;
     padding: 6px;
-    color: grey;
+    color: black;
     background-color: white;
     border-color: palevioletred;
     box-shadow: 2px 4px palevioletred;
@@ -58,6 +58,6 @@
     height: 25px;
     width: 100px;
     text-align: center;
-    color: grey;
+    color: black;
 }
 
