--- a/src/Components/CSS/products.css
+++ b/src/Components/CSS/products.css
@@ -4,7 +4,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Creepster&family=Rubik+Burned&family=Rubik+Iso&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Creepster&family=PT+Sans+Narrow&family=Rubik+Burned&family=Rubik+Iso&display=swap');
 
-h1 {
+#productTitle{
     font-family: Creepster;
     font-size: 50px;
     color: hotpink;
