--- a/src/Components/CSS/Cart.css
+++ b/src/Components/CSS/Cart.css
@@ -1,6 +1,9 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Creepster&family=Rubik+Burned&family=Rubik+Iso&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Creepster&family=PT+Sans+Narrow&family=Rubik+Burned&family=Rubik+Iso&display=swap');
+
 #cartCard h2{
     text-align: center;
     font-size: 40px;
-    font-family: monospace;
+    font-family: creepster;
 }
-
