--- a/src/Components/CSS/Register.css
+++ b/src/Components/CSS/Register.css
@@ -1,10 +1,14 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Creepster&family=Rubik+Burned&family=Rubik+Iso&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Creepster&family=PT+Sans+Narrow&family=Rubik+Burned&family=Rubik+Iso&display=swap');
+
 #registerForm{
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     text-align: center;
-    background-image: url(login.jpg);
+    background-image: url(register.jpg);
     background-position:center;
 }
 
@@ -18,12 +22,11 @@
     padding: 10px;
     height: 50rem;
     border-radius: 10px;
-    background-color: rgba(235, 158, 212, 0.61);
-    backdrop-filter: blur(5px);}
+}
 
 
 #registerForm h1 {
-    font-family: monospace;
+    font-family: creepster;
     font-size: xx-large;
     text-shadow: 0px 7px 8px black;
     color: white;
@@ -39,8 +42,8 @@
     color: black;
     border-radius: 8px;
     border-style: solid;
-    border-color: palevioletred;
-    box-shadow: 5px 8px palevioletred;
+    border-color: hotpink;
+    box-shadow: 3px 5px hotpink;
     outline: none;
 }
 
@@ -49,10 +52,10 @@
     border-style: solid;
     border-radius: 8px;
     padding: 6px;
-    color: grey;
+    color: black;
     background-color: white;
-    border-color: palevioletred;
-    box-shadow: 2px 4px palevioletred;
+    border-color: hotpink;
+    box-shadow: 2px 2px hotpink;
     margin-top: 30px;
 }
 
@@ -60,26 +63,31 @@
     padding: 1.5px;
     border-radius: 8px;
     border-style: solid;
-    border-color: palevioletred;
-    box-shadow: 2px 4px palevioletred;
+    border-color: hotpink;
+    box-shadow: 2px 2px hotpink;
     background-color: white;
     height: 25px;
     width: 100px;
     text-align: center;
-    color: grey;
+    color: black;
 }
 
 
 #reqHeader {
-    font-family: monospace;
+    font-family: creepster;
     font-size: xx-large;
-    text-shadow: 0px 5px 6px black;
     color: white;
 }
 
 #singleReq {
     font-family: monospace;
     color: white;
+    font-size: 15px;
+    text-decoration: underline;
 }
 
 
+#signUp{
+    border-color: hotpink;
+    box-shadow: 2px 4px hotpink;
+}
