--- a/src/Components/CSS/products.css
+++ b/src/Components/CSS/products.css
@@ -6,16 +6,19 @@
 
 #productTitle{
     font-family: Creepster;
-    font-size: 50px;
+    font-size: 55px;
     color: hotpink;
     text-align: center;
+    text-shadow: -3px 3px black;
 }
 
 .allProductsPresent {
     background-color: pink;
     background-image: url(products.webp);
     background-position: center;
-    background-size: auto;
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: 91.5vh;
     padding: 5%;
 }
 
@@ -23,4 +26,9 @@
     display: grid;
     align-items: center;
     text-align: center;
+}
+
+#prodSearchForm{
+    text-align: center;
+    margin-top: -30px;
 }
