--- a/src/Components/CSS/productView.css
+++ b/src/Components/CSS/productView.css
@@ -1,3 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Faster+One&family=Lato:ital,wght@1,300&family=Rajdhani&family=Raleway:wght@300&family=Sail&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Rubik+Iso&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Rubik+Burned&family=Rubik+Iso&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Creepster&family=Rubik+Burned&family=Rubik+Iso&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Creepster&family=PT+Sans+Narrow&family=Rubik+Burned&family=Rubik+Iso&display=swap');
+
 .productViewDiv {
     display: center;
     background-image: url(productView.webp);
@@ -9,4 +15,14 @@
 
 #productViewCard {
     display: center;
+}
+
+.productViewTitle {
+    font-family: Creepster;
+    font-size: 30px;
+    color: hotpink;
+}
+
+#description {
+    font-family: Faster;
 }
