--- a/src/Components/CSS/Home.css
+++ b/src/Components/CSS/Home.css
@@ -5,7 +5,7 @@
 #homePage{
     display: flex;
     justify-content: center;
-    background-image: url(tvstatic.gif);
+    background-image: url(home.gif);
     height: 91.5vh;
     width: 100vw;
 }
@@ -18,6 +18,6 @@
     color: hotpink;
     font-size: 70px;
     font-style: oblique;
-    text-shadow: -4px 4px white;
+    text-shadow: -4px 4px black;
 }
 
