--- a/src/Components/CSS/products.css
+++ b/src/Components/CSS/products.css
@@ -17,7 +17,7 @@
     background-image: url(products.webp);
     background-position: center;
     background-size: cover;
-    background-repeat: no-repeat;
+    background-repeat: inherit;
     height: 91.5vh;
     padding: 5%;
 }
