--- a/src/Components/CSS/Cart.css
+++ b/src/Components/CSS/Cart.css
@@ -3,6 +3,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Creepster&family=PT+Sans+Narrow&family=Rubik+Burned&family=Rubik+Iso&display=swap');
 
 #cartCard h2{
+    
     text-align: center;
     font-size: 40px;
     font-family: creepster;
@@ -11,6 +12,7 @@
 }
 
 #cartCard{
+    text-align: center;
     background-image: url(cart.jpg);
     background-size: cover;
     height: 90vh;
